--- a/resource_allocation_app/templates/resource_allocation_app/budget_allocation_demo.html
+++ b/resource_allocation_app/templates/resource_allocation_app/budget_allocation_demo.html
@@ -1,6 +1,6 @@
 {% extends "core/base.html" %}
 {% load static %}
-{% load matching_filters %} {# get_range, get_item_simple 필터 사용 #}
+{% load resource_allocation_filters %} {# get_range, get_item_simple 필터 사용 #}
 
 {% block title %}Budget Allocation - Demo{% endblock %}
 
