1. data center instruction and demo 2. Modify the duplication of filters.py

--- a/resource_allocation_app/templates/resource_allocation_app/data_center_capacity_demo.html
+++ b/resource_allocation_app/templates/resource_allocation_app/data_center_capacity_demo.html
@@ -71,6 +71,7 @@
         <input type="hidden" name="num_server_types" value="{{ submitted_num_server_types }}">
         <input type="hidden" name="num_services" value="{{ submitted_num_services }}">
 
+        {# form_data|get_item_simple:key_name -> get_item_simple(form_data, key_name)] #}
         <div class="form-section">
             <h4>1. 글로벌 제약 조건</h4>
             <div class="form-row">
