--- a/resource_allocation_app/templates/resource_allocation_app/data_center_capacity_demo_ori.html
+++ b/resource_allocation_app/templates/resource_allocation_app/data_center_capacity_demo_ori.html
@@ -71,6 +71,7 @@
         <input type="hidden" name="num_server_types" value="{{ submitted_num_server_types }}">
         <input type="hidden" name="num_services" value="{{ submitted_num_services }}">
 
+        {# form_data|get_item_simple:key_name -> get_item_simple(form_data, key_name)] #}
         <div class="form-section">
             <h4>1. 글로벌 제약 조건</h4>
             <div class="form-row">
@@ -93,96 +94,69 @@
         </div>
 
         <div class="form-section">
-            <h4>2. 서버별 정보 (총 {{ submitted_num_server_types }}개)</h4>
+            <h4>2. 서버 유형별 정보 (총 {{ submitted_num_server_types }}개)</h4>
             {% for i in submitted_num_server_types|get_range %}
+
+                <legend class="h6">서버 유형 {{ i|add:1 }}</legend>
                 <div class="form-row">
-                    {% make_key 'server' i 'id' as key %}
-                    <div class="form-group col-md-1">
-                        <label for="{{ key }}">서버 ID:</label>
-                        <input type="text" class="form-control form-control-sm" id="server_{{ i }}_id" name="{{ key }}"
-                               value="{{ form_data|get_item_simple:key }}">
-                    </div>
-                    {% make_key 'server' i 'cost' as key %}
-                    <div class="form-group col-md-1">
-                        <label for="{{ key }}">비용:</label>
-                        <input type="number" step="any" min="0" class="form-control form-control-sm" name="{{ key }}"
-                               value="{{ form_data|get_item_simple:key }}">
-                    </div>
-                    {% make_key 'server' i 'cpu_cores' as key %}
-                    <div class="form-group col-md-1">
-                        <label for="{{ key }}">CPU(코어):</label>
-                        <input type="number" min="0" class="form-control form-control-sm" name="{{ key }}"
-                               value="{{ form_data|get_item_simple:key }}">
-                    </div>
-                    {% make_key 'server' i 'ram_gb' as key %}
-                    <div class="form-group col-md-1">
-                        <label for="{{ key }}">RAM(GB):</label>
-                        <input type="number" min="0" class="form-control form-control-sm" name="{{ key }}"
-                               value="{{ form_data|get_item_simple:key }}">
-                    </div>
-                    {% make_key 'server' i 'storage_tb' as key %}
                     <div class="form-group col-md-2">
-                        <label for="{{ key }}">스토리지(TB):</label>
-                        <input type="number" step="any" min="0" class="form-control form-control-sm" name="{{ key }}"
-                               value="{{ form_data|get_item_simple:key }}">
+                        <label for="server_{{ i }}_id">유형 ID:</label>
+                        <input type="text" class="form-control form-control-sm" id="server_{{ i }}_id" name="server_{{ i }}_id"
+                               value="{% with k='server_'|add:i|add:'_id' %}{{ form_data|get_item_simple:k|default_if_none:'Srv'|add:i|add:1|stringformat:'s' }}{% endwith %}">
                     </div>
-                    {% make_key 'server' i 'power_kva' as key %}
-                    <div class="form-group col-md-1">
-                        <label for="{{ key }}">전력(kVA):</label>
-                        <input type="number" step="any" min="0" class="form-control form-control-sm" name="{{ key }}"
-                               value="{{ form_data|get_item_simple:key }}">
+                    <div class="form-group col-md-2">
+                        <label for="server_{{ i }}_cost">비용:</label>
+                        <input type="number" step="any" min="0" class="form-control form-control-sm" name="server_{{ i }}_cost"
+                               value="{% with k='server_'|add:i|add:'_cost'%}{{form_data|get_item_simple:k|default_if_none:'5000'}}{%endwith%}">
                     </div>
-                    {% make_key 'server' i 'space_sqm' as key %}
-                    <div class="form-group col-md-1">
-                        <label for="{{ key }}">공간(sqm):</label>
-                        <input type="number" step="any" min="0" class="form-control form-control-sm" name="{{ key }}"
-                               value="{{ form_data|get_item_simple:key }}">
+                    <div class="form-group col-md-2">
+                        <label for="server_{{ i }}_cpu_cores">CPU(코어):</label>
+                        <input type="number" min="0" class="form-control form-control-sm" name="server_{{ i }}_cpu_cores"
+                               value="{% with k='server_'|add:i|add:'_cpu_cores'%}{{form_data|get_item_simple:k|default_if_none:'64'}}{%endwith%}">
+                    </div>
+                    <div class="form-group col-md-2">
+                        <label for="server_{{ i }}_ram_gb">RAM(GB):</label>
+                        <input type="number" min="0" class="form-control form-control-sm" name="server_{{ i }}_ram_gb"
+                               value="{% with k='server_'|add:i|add:'_ram_gb'%}{{form_data|get_item_simple:k|default_if_none:'256'}}{%endwith%}">
+                    </div>
+                    <div class="form-group col-md-2">
+                        <label for="server_{{ i }}_storage_tb">스토리지(TB):</label>
+                        <input type="number" step="any" min="0" class="form-control form-control-sm" name="server_{{ i }}_storage_tb"
+                               value="{% with k='server_'|add:i|add:'_storage_tb'%}{{form_data|get_item_simple:k|default_if_none:'10'}}{%endwith%}">
+                    </div>
+                    <div class="form-group col-md-2">
+                        <label for="server_{{ i }}_power_kva">전력(kVA):</label>
+                        <input type="number" step="any" min="0" class="form-control form-control-sm" name="server_{{ i }}_power_kva"
+                               value="{% with k='server_'|add:i|add:'_power_kva'%}{{form_data|get_item_simple:k|default_if_none:'0.5'}}{%endwith%}">
+                    </div>
+                    <div class="form-group col-md-2">
+                        <label for="server_{{ i }}_space_sqm">공간(sqm):</label>
+                        <input type="number" step="any" min="0" class="form-control form-control-sm" name="server_{{ i }}_space_sqm"
+                               value="{% with k='server_'|add:i|add:'_space_sqm'%}{{form_data|get_item_simple:k|default_if_none:'0.2'}}{%endwith%}">
                     </div>
                 </div>
+
             {% endfor %}
         </div>
 
         <div class="form-section">
             <h4>3. 서비스 수요별 정보 (총 {{ submitted_num_services }}개)</h4>
             {% for i in submitted_num_services|get_range %}
-                <div class="form-row">
-                    {% make_key 'service' i 'id' as key %}
-                    <div class="form-group">
-                         <label for="{{ key }}">서비스 ID:</label>
-                         <input type="text" class="form-control form-control-sm" id="service_{{ i }}_id" name="{{ key }}"
-                                value="{{ form_data|get_item_simple:key }}">
-                    </div>
-                    {% make_key 'service' i 'revenue_per_unit' as key %}
-                    <div class="form-group col-md-1">
-                        <label for="{{ key }}">단위당 수익:</label>
-                        <input type="number" step="any" min="0" class="form-control form-control-sm" name="{{ key }}"
-                               value="{{ form_data|get_item_simple:key }}">
-                    </div>
-                    {% make_key 'service' i 'req_cpu_cores' as key %}
-                    <div class="form-group col-md-1">
-                        <label for="{{ key }}">요구CPU:</label>
-                        <input type="number" min="0" class="form-control form-control-sm" name="{{ key }}"
-                               value="{{ form_data|get_item_simple:key }}">
-                    </div>
-                    {% make_key 'service' i 'req_ram_gb' as key %}
-                    <div class="form-group col-md-1">
-                        <label for="{{ key }}">요구RAM:</label>
-                        <input type="number" min="0" class="form-control form-control-sm" name="{{ key }}"
-                               value="{{ form_data|get_item_simple:key }}">
-                    </div>
-                    {% make_key 'service' i 'req_storage_tb' as key %}
-                    <div class="form-group col-md-1">
-                        <label for="{{ key }}">요구 strg:</label>
-                        <input type="number" step="any" min="0" class="form-control form-control-sm" name="{{ key }}"
-                               value="{{ form_data|get_item_simple:key }}">
-                    </div>
-                    {% make_key 'service' i 'max_units' as key %}
-                    <div class="form-group col-md-1">
-                        <label for="{{ key }}">최대유닛:</label>
-                        <input type="number" min="0" class="form-control form-control-sm" name="{{ key }}"
-                               value="{{ form_data|get_item_simple:key }}">
-                    </div>
+            <fieldset class="mb-3 p-3 border rounded">
+                <legend class="h6">서비스 {{ i|add:1 }}</legend>
+                <div class="form-group">
+                     <label for="service_{{ i }}_id">서비스 ID:</label>
+                     <input type="text" class="form-control form-control-sm" id="service_{{ i }}_id" name="service_{{ i }}_id"
+                            value="{% with key_name='service_'|add:i|add:'_id' %}{{ form_data|get_item_simple:key_name|default_if_none:'Svc'|add:i|add:1|stringformat:'s' }}{% endwith %}">
                 </div>
+                <div class="form-row">
+                    <div class="form-group col-md-2"><label for="service_{{ i }}_revenue_per_unit">단위당 수익:</label><input type="number" step="any" min="0" class="form-control form-control-sm" name="service_{{ i }}_revenue_per_unit" value="{% with k='service_'|add:i|add:'_revenue_per_unit'%}{{form_data|get_item_simple:k|default_if_none:'100'}}{%endwith%}"></div>
+                    <div class="form-group col-md-2"><label for="service_{{ i }}_req_cpu_cores">요구CPU:</label><input type="number" min="0" class="form-control form-control-sm" name="service_{{ i }}_req_cpu_cores" value="{% with k='service_'|add:i|add:'_req_cpu_cores'%}{{form_data|get_item_simple:k|default_if_none:'4'}}{%endwith%}"></div>
+                    <div class="form-group col-md-2"><label for="service_{{ i }}_req_ram_gb">요구RAM:</label><input type="number" min="0" class="form-control form-control-sm" name="service_{{ i }}_req_ram_gb" value="{% with k='service_'|add:i|add:'_req_ram_gb'%}{{form_data|get_item_simple:k|default_if_none:'8'}}{%endwith%}"></div>
+                    <div class="form-group col-md-2"><label for="service_{{ i }}_req_storage_tb">요구스토리지:</label><input type="number" step="any" min="0" class="form-control form-control-sm" name="service_{{ i }}_req_storage_tb" value="{% with k='service_'|add:i|add:'_req_storage_tb'%}{{form_data|get_item_simple:k|default_if_none:'0.1'}}{%endwith%}"></div>
+                    <div class="form-group col-md-2"><label for="service_{{ i }}_max_units">최대수요(유닛):</label><input type="number" min="0" class="form-control form-control-sm" name="service_{{ i }}_max_units" value="{% with k='service_'|add:i|add:'_max_units'%}{{form_data|get_item_simple:k|default_if_none:'50'}}{%endwith%}"></div>
+                </div>
+            </fieldset>
             {% endfor %}
         </div>
 
