--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -57,14 +57,14 @@
                             <li class="nav-item nested">
                                 <a class="nav-link {% if active_submenu == 'budget_allocation_demo' %}active{% endif %}" href="{% url 'resource_allocation_app:budget_allocation_demo' %}">Demo</a>
                             </li>
-                             <li class="nav-item mt-2"><strong class="sidebar-subtitle">financial Portfolio</strong></li>
+                            <li class="nav-item mt-2"><strong class="sidebar-subtitle">financial Portfolio</strong></li>
                             <li class="nav-item nested">
                                 <a class="nav-link {% if active_submenu == 'financial_portfolio_introduction' %}active{% endif %}" href="{% url 'resource_allocation_app:financial_portfolio_introduction' %}">Introduction</a>
                             </li>
                             <li class="nav-item nested">
                                 <a class="nav-link {% if active_submenu == 'financial_portfolio_demo' %}active{% endif %}" href="{% url 'resource_allocation_app:financial_portfolio_demo' %}">Demo(준비중)</a>
                             </li>
-                             <li class="nav-item mt-2"><strong class="sidebar-subtitle">설비 투자 및 생산 능력 할당</strong></li>
+                            <li class="nav-item mt-2"><strong class="sidebar-subtitle">Data Center Capacity</strong></li>
                             <li class="nav-item nested">
                                 <a class="nav-link {% if active_submenu == 'data_center_capacity_introduction' %}active{% endif %}" href="{% url 'resource_allocation_app:data_center_capacity_introduction' %}">Introduction</a>
                             </li>
